--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -73,6 +73,7 @@ color: "#30638e"
 
 # Build settings
 markdown: kramdown
+remote_theme: vsoch/docsy-jekyll
 
 # If you add tags to pages, define this variable to link them to some external search
 # If you want to link to tags locally on the site, leave this commented out
