--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ANA FlightSim Web Knowledge Base
+title: Knowledge Base
 email: anaflightsim@hotmail.com
 author: ANA7875
 description: > # this means to ignore newlines until "baseurl:"
@@ -58,7 +58,7 @@ version_params:
     - Previous
 
 # Should there be feedback buttons at the bottom of pages?
-feedback: true
+feedback: false
 
 # Link to a privacy policy in footer, uncomment and define if wanted
 # privacy: https://domain.com/privacy
@@ -73,7 +73,7 @@ color: "#30638e"
 
 # Build settings
 markdown: kramdown
-remote_theme: vsoch/docsy-jekyll
+#remote_theme: vsoch/docsy-jekyll
 
 # If you add tags to pages, define this variable to link them to some external search
 # If you want to link to tags locally on the site, leave this commented out
@@ -99,6 +99,11 @@ defaults:
   - scope:
       path: "_docs"
       type: "docs"
+    values:
+      layout: page
+  - scope:
+      path: "_airport"
+      type: "airport"
     values:
       layout: page
   -
