--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,9 +18,7 @@ title: Knowledge Base
 email: anaflightsim@hotmail.com
 author: ANA7875
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  ANA Flightsim Knowledge serves as knowledge database for flightsimming ANA flights in Japan. 
 
 # Add your baseurl here (your repository) but DO NOT CHANGE THE LINE NUMBER without editing .circleci/circle_urls.sh
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -118,3 +116,6 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+
+plugins:
+  - jekyll-redirect-from
